Organizando dados de testes e implementando testes payment

--- a/src/test/resources/application-qa.properties
+++ b/src/test/resources/application-qa.properties
@@ -1,2 +1,2 @@
-//url = https://reqres.in
-url = https://5c8fa6988447f30014cb82ea.mockapi.io
+reqres.url = https://reqres.in
+mockapi.url = https://5c8fa6988447f30014cb82ea.mockapi.io
