--- a/src/test/resources/data-qa.properties
+++ b/src/test/resources/data-qa.properties
@@ -1,2 +1,12 @@
 name = morpheus
-jobs = leader
+job = leader
+
+clientId = ACD123
+referenceId = 1239878889
+value = 500
+installments = 3
+number = 4532101557982126
+expMonth = 12
+expYear = 2025
+cvv = 123
+holder.name = Teste Teste
